2007-10-14 Paul Jakma <paul.jakma@sun.com>

	* NEWS: Note that MRT dumps are now version 2

2007-09-07 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump version to 0.99.9

2007-08-07 James Carlson <james.d.carlson@sun.com>

	* configure.ac: Added support for separate link-layer access
	  mechanisms in isisd.

2007-07-27 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump version to 0.99.8

2007-06-25 Hasso Tepper <hasso@quagga.net>

	* configure.ac: Fix typo so it compiles again on BSD systems.

2007-06-22 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: IRDP also depends on struct icmphdr, enabling
	  only on in_pktinfo breaks when an OS acquires pktinfo, as
	  Solaris NV has. Reported by Jim Carlson.

2007-05-10 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Add back check for inet_aton, which got dropped
	  somehow in previous jumbo patch.
	  Use AC_GNU_SOURCE to define _GNU_SOURCE, rather than having
	  lib/zebra.h do it.
	  AC_FUNC_STRNLEN has side-effects with latest autoconf, use 
	  AC_CHECK_FUNC on strnlen instead.

2007-05-09 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: sys/conf.h depends on sys/param.h, at least on
	  FBSD 6.2.
	  (bug #363) Should check for in_pktinfo for IRDP

2006-05-27 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: General cleanup of header and type checks, introducing
	  an internal define, QUAGGA_INCLUDES, to build up a list of
	  stuff to include so as to avoid 'present but cant be compiled'
	  warnings.
	  Misc additional checks of things missing according to autoscan.
	  Add LIBM, for bgpd's use of libm, so as to avoid burdening
	  LIBS, and all the binaries, with libm linkage.
	  Remove the bad practice of using m4 changequote(), just
	  quote the []'s in the case statements properly.
	  This should fix bugs 162, 303 and 178.
	* */*.{c,h}: Update all HAVE_* to the standard autoconf namespaced
	  HAVE_* defines. I.e. HAVE_SA_LEN -> HAVE_STRUCT_SOCKADDR_SA_LEN,