@@ -5,7 +5,7 @@
 ##  Copyright (c) 1996, 97, 98, 99, 2000 Kunihiro Ishiguro <kunihiro@zebra.org>
 ##  Portions Copyright (c) 2003 Paul Jakma <paul@dishone.st>
 ##
-## $Id: configure.ac,v 1.139 2007/09/07 16:54:01 paul Exp $
+## $Id: configure.ac,v 1.140 2008/01/10 15:24:32 ajs Exp $
 AC_PREREQ(2.53)
 
 AC_INIT(Quagga, 0.99.9, [http://bugzilla.quagga.net])
@@ -889,6 +889,13 @@ AC_TRY_COMPILE([#ifdef HAVE_SYS_PARAM_H
 #endif],[AC_MSG_RESULT(yes)
 AC_DEFINE(HAVE_BSD_STRUCT_IP_MREQ_HACK,,[Can pass ifindex in struct ip_mreq])],
 AC_MSG_RESULT(no))
+
+dnl ---------------------------------------------------------------
+dnl figure out how to check link-state
+dnl ---------------------------------------------------------------
+AC_CHECK_HEADER([net/if_media.h],
+  [AC_DEFINE(HAVE_BSD_LINK_DETECT,,[BSD link-detect])],
+  [], QUAGGA_INCLUDES)
 
 dnl -----------------------
 dnl check proc file system.
